--- a/doqmeat/projects/body.css
+++ b/doqmeat/projects/body.css
@@ -1,95 +1,96 @@
 :root {
-	--fonts: gaegu-r, ms pgothic, arial;
+  --fonts: mononoki, ms pgothic, arial;
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html {
+  scrollbar-color: #fcdac8 #f5f2ea;
 }
 
 body {
-	font-size: 18px;
-	font-family: var(--fonts);
-	margin: 0;
-	text-align: center;
-	color: #ca5e2c;
-	background: #fad97c;
-	scrollbar-color: #fcdac8 #f5f2ea;
-	background: url("/notebook/!g/grid-mustard.png");
-	background-size: 6px;
-	background-position: center;
+  font-size: 14px;
+  font-family: var(--fonts);
+  margin: 0;
+  text-align: center;
+  color: #ca5e2c;
+  background-color: #fad97c;
+  background-position: center;
 }
 
 ::selection {
-	background: #ca5e2c;
-	color: white;
+  background: #ca5e2c;
+  color: white;
 }
 
 h1 {
-	letter-spacing: 5px;
-	font-size: 40px;
-	line-height: 60px;
-	font-family: bm-neko, var(--fonts);
+  font-weight: normal;
+  letter-spacing: 5px;
+  font-size: 40px;
+  line-height: 60px;
+  font-family: bm-neko, var(--fonts);
 }
 
 li {
-	text-align: left;
-	margin-bottom: 10px;
+  text-align: left;
+  margin-bottom: 10px;
 }
 
 code {
-	font-family: consolas;
-	background: black;
-	color: white;
-	font-size: 14px;
-	border: 1px solid #6A5C3E;
-	border-radius: 10px;
-	padding: 0 5px;
+  font-family: consolas;
+  background: black;
+  color: white;
+  font-size: 14px;
+  border: 1px solid #6a5c3e;
+  border-radius: 10px;
+  padding: 0 5px;
 }
 
 a {
-	font-family: , var(--fonts);
-	color: #634937;
-	transition: 0.5s;
-	text-decoration: none;
+  font-family: var(--fonts);
+  color: #634937;
+  transition-duration: 0.5s;
 }
 
 a:hover {
-	border-radius: 5px 5px 0 0;
-	background: #fcd7c7;
+  border-radius: 5px 5px 0 0;
+  background: #fcd7c7;
 }
 
 h1,
 footer {
-	margin: 1%;
+  margin: 1%;
 }
 
 main {
-	margin: auto;
-	max-width: 900px;
-	padding: 10px;
-	overflow: auto;
-	border-radius: 20px;
+  margin: auto;
+  max-width: 900px;
+  padding: 10px;
+  overflow: auto;
+  border-radius: 20px;
 }
 
 main,
 footer {
-	word-spacing: 9px;
-	line-height: 20px;
+  word-spacing: 9px;
+  line-height: 20px;
 }
 
 footer p {
-	background: #fad97c;
-	margin: 1px;
+  background: #fad97c;
+  margin: 1px;
 }
 
 #s-m-t-tooltip {
-	background: brown;
-	color: white;
-	text-align: center;
-	z-index: 9999;
-	margin: 30px 15px 7px 12px;
-	padding: 5px;
-	font-family: gaegu-l;
-	max-width: 300px;
-	border-radius: 20px;
+  background: brown;
+  color: white;
+  text-align: center;
+  z-index: 9999;
+  margin: 30px 15px 7px 12px;
+  padding: 5px;
+  font-family: gaegu-l;
+  max-width: 300px;
+  border-radius: 20px;
 }
