changed color theme of listening logs

--- a/doqmeat/music/body.css
+++ b/doqmeat/music/body.css
@@ -4,7 +4,7 @@
 
 :root {
   --fonts: ms pgothic, natsuzemi, nanum-b, arial;
-  --pink: #fbb5cdbc;
+  --pink: #fbb5cd;
   --yellow: #feeac7;
   --peach: #ffdbc2;
   --brown: #3b2929;
