--- a/doqmeat/vgs/body.css
+++ b/doqmeat/vgs/body.css
@@ -17,6 +17,7 @@ body {
   -o-background-size: cover;
   background-size: cover;
   word-wrap: break-word;
+  background-color: #d5eeb1;
   font-size: 18px;
   line-height: 22px;
   word-spacing: 5px;
