--- a/doqmeat/music/index.css
+++ b/doqmeat/music/index.css
@@ -1,9 +1,9 @@
 #wrapper {
-	position: relative;
-	max-width: 1010px;
-	margin: auto;
-	word-spacing: -6px;
-	margin-top: 50px;
+  position: relative;
+  max-width: 1010px;
+  margin: auto;
+  word-spacing: -6px;
+  margin-top: 50px;
 }
 
 nav,
@@ -12,414 +12,412 @@ nav,
 #featured,
 #is-he-listening,
 footer {
-	word-spacing: var(--spacing);
+  word-spacing: var(--spacing);
 }
 
 header {
-	position: relative;
-	background: url(!g/index/header.png);
-	background-size: 100%;
-	background-position: bottom;
-	background-repeat: no-repeat;
-	width: 100%;
-	height: 200px;
-	border: var(--b-border);
-	margin-bottom: 5px;
-	border-radius: 10px 10px 0px 0px;
+  position: relative;
+  background: url(!g/index/header.png);
+  background-size: 100%;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 200px;
+  border: var(--b-border);
+  margin-bottom: 5px;
+  border-radius: 10px 10px 0px 0px;
 }
 
 :root {
-	--p-border: 4px ridge var(--pink);
-	--lp-border: 4px ridge var(--l-pink);
-	--y-border: 4px ridge var(--yellow);
-	--b-border: 4px ridge var(--l-brown);
+  --p-border: 4px ridge var(--pink);
+  --lp-border: 4px ridge var(--l-pink);
+  --y-border: 4px ridge var(--yellow);
+  --b-border: 4px ridge var(--l-brown);
 }
 
 h1 {
-	-webkit-text-stroke-color: var(--brown);
-	letter-spacing: 4px;
-	position: absolute;
-	bottom: -20px;
-	left: 10px;
+  -webkit-text-stroke-color: var(--brown);
+  letter-spacing: 4px;
+  position: absolute;
+  bottom: -20px;
+  left: 10px;
 }
 
 #scroll {
-	background: white;
-	width: 100%;
-	border: var(--b-border);
-	margin-bottom: 5px;
+  background: white;
+  width: 100%;
+  border: var(--b-border);
+  margin-bottom: 5px;
 }
 
 .box {
-	position: relative;
-	display: inline-block;
-	vertical-align: top;
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
 }
 
 nav {
-	background: var(--soft-brown);
-	width: 200px;
-	height: 550px;
-	border: var(--y-border);
-	padding: 3px 5px;
-	overflow: auto;
-	scrollbar-width: none;
-	/* Firefox */
-	margin-right: 5px;
+  background: var(--soft-brown);
+  width: 200px;
+  height: 550px;
+  border: var(--y-border);
+  padding: 3px 5px;
+  overflow: auto;
+  scrollbar-width: none;
+  /* Firefox */
+  margin-right: 5px;
 }
 
 nav::-webkit-scrollbar {
-	display: none;
-	/* Safari and Chrome */
+  display: none;
+  /* Safari and Chrome */
 }
 
 nav a {
-	display: block;
-	margin: 10px 0px;
-	padding: 5px 0px;
-	transition-duration: 0.3s;
-	font-family: newpenji;
-	font-weight: normal;
-	font-size: 20px;
-	line-height: 16px;
+  display: block;
+  margin: 10px 0px;
+  padding: 5px 0px;
+  transition-duration: 0.3s;
+  font-family: newpenji;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 16px;
 }
 
 nav a:hover {
-	margin-left: 15px;
-	color: var(--l-brown);
+  margin-left: 15px;
+  color: var(--l-brown);
 }
 
 nav a:focus {
-	margin-left: 15px;
-	color: var(--l-brown);
-	background: var(--l-yellow);
+  margin-left: 15px;
+  color: var(--l-brown);
+  background: var(--l-yellow);
 }
 
 nav h3,
 nav h4 {
-	-webkit-text-stroke-width: 0px;
-	text-align: center;
-	letter-spacing: 2px;
+  -webkit-text-stroke-width: 0px;
+  text-align: center;
+  letter-spacing: 2px;
 }
 
 nav h3 {
-	font-size: 15px;
+  font-size: 15px;
 }
 
 nav h4 {
-	font-size: 13px;
+  font-size: 13px;
 }
 
 h4 {
-	font-size: 15px;
+  font-size: 15px;
 }
 
 #main {
-	background: var(--l-yellow);
-	width: 509px;
-	height: 550px;
-	margin-right: 5px;
+  background: var(--l-yellow);
+  width: 509px;
+  height: 550px;
+  margin-right: 5px;
 }
 
 #main iframe {
-	border: var(--p-border);
+  border: var(--p-border);
 }
 
 #side {
-	width: 290px;
-	height: 550px;
+  width: 290px;
+  height: 550px;
 }
 
 #player {
-	background: var(--pink);
-	width: 100%;
-	height: 364px;
-	border: var(--b-border);
+  background: var(--pink);
+  width: 100%;
+  height: 364px;
+  border: var(--b-border);
 }
 
 #img {
-	margin-top: 5px;
-	background: url(!g/index/cat-dj.png);
-	background-size: 220px;
-	background-position: center right;
-	background-repeat: no-repeat;
-	background-color: white;
-	display: block;
-	width: 100%;
-	height: 180px;
-	padding: 5px;
-	overflow: hidden;
-	border: var(--y-border);
-	word-spacing: 2px;
+  margin-top: 5px;
+  background: url(!g/index/cat-dj.png);
+  background-size: 220px;
+  background-position: center right;
+  background-repeat: no-repeat;
+  background-color: white;
+  display: block;
+  width: 100%;
+  height: 180px;
+  padding: 5px;
+  overflow: hidden;
+  border: var(--y-border);
+  word-spacing: 2px;
 }
 
 #mv {
-	background: var(--yellow);
-	margin-top: 5px;
-	width: 100%;
-	height: 150px;
-	border: var(--b-border);
-	overflow: hidden;
-	line-height: 0px;
+  background: var(--yellow);
+  margin-top: 5px;
+  width: 100%;
+  height: 150px;
+  border: var(--b-border);
+  overflow: hidden;
+  line-height: 0px;
 }
 
 #mv img {
-	width: 100%;
+  width: 100%;
 }
 
 #mv a {
-	padding: 0px;
-	background: var(--yellow);
+  padding: 0px;
 }
 
 #log {
-	margin-top: 5px;
-	width: 400px;
-	height: 230px;
-	overflow: hidden;
-	border: var(--y-border);
-	margin-right: 5px;
+  margin-top: 5px;
+  width: 400px;
+  height: 230px;
+  overflow: hidden;
+  border: var(--y-border);
+  margin-right: 5px;
 }
 
 #log iframe {
-	border: none;
+  border: none;
 }
 
 #log a {
-	position: absolute;
-	display: inline-block;
-	background: transparent;
-	top: 1px;
-	left: 1px;
-	width: 100%;
-	height: 100%;
+  position: absolute;
+  display: inline-block;
+  background: transparent;
+  top: 1px;
+  left: 1px;
+  width: 100%;
+  height: 100%;
 }
 
 #log h4 {
-	position: absolute;
-	display: block;
-	margin-top: 10px;
-	margin-left: 4px;
+  position: absolute;
+  display: block;
+  margin-top: 10px;
+  margin-left: 4px;
 }
 
 #featured {
-	background: var(--l-brown);
-	color: var(--l-yellow);
-	margin-top: 5px;
-	width: 605px;
-	height: 230px;
-	padding: 5px;
-	overflow: auto;
-	border: var(--p-border);
+  background: var(--l-brown);
+  color: var(--l-yellow);
+  margin-top: 5px;
+  width: 605px;
+  height: 230px;
+  padding: 5px;
+  overflow: auto;
+  border: var(--p-border);
 }
 
 #featured i {
-	color: var(--brown);
+  color: var(--brown);
 }
 
 #featured p {
-	margin: 0px;
+  margin: 0px;
 }
 
 #featured h4 {
-	margin: 5px 0px;
-	text-align: center;
+  margin: 5px 0px;
+  text-align: center;
 }
 
 #featured iframe {
-	width: 100%;
-	height: 152px;
-	border-radius: 10px;
+  width: 100%;
+  height: 152px;
+  border-radius: 10px;
 }
 
 .song,
 .lp {
-	display: inline-block;
-	width: 49%;
-	vertical-align: top;
+  display: inline-block;
+  width: 49%;
+  vertical-align: top;
 }
 
 #featured hr {
-	border: 1px dashed var(--yellow);
+  border: 1px dashed var(--yellow);
 }
 
 #is-he-listening {
-	background: url(!g/index/is-he-listening.png) no-repeat;
-	background-size: 400px;
-	background-position: top left;
-	background-color: white;
-	text-align: right;
-	padding: 5px;
-	width: 525px;
-	height: 250px;
-	border: var(--lp-border);
-	margin-top: 5px;
-	margin-right: 5px;
+  background: url(!g/index/is-he-listening.png) no-repeat;
+  background-size: 400px;
+  background-position: top left;
+  background-color: white;
+  text-align: right;
+  padding: 5px;
+  width: 525px;
+  height: 250px;
+  border: var(--lp-border);
+  margin-top: 5px;
+  margin-right: 5px;
 }
 
 #is-he-listening h4 {
-	margin: 5px 0px;
+  margin: 5px 0px;
 }
 
 #last {
-	background: var(--yellow);
-	width: 300px;
-	height: 250px;
-	overflow: auto;
-	text-align: center;
-	border: var(--b-border);
-	margin-top: 5px;
-	margin-right: 5px;
+  background: var(--yellow);
+  width: 300px;
+  height: 250px;
+  overflow: auto;
+  text-align: center;
+  border: var(--b-border);
+  margin-top: 5px;
+  margin-right: 5px;
 }
 
 .feed-title {
-	display: none;
+  display: none;
 }
 
 .feed-item-title {
-	font-family: gaegu-r, var(--fonts);
-	word-spacing: 2px;
-	letter-spacing: 3px;
-	line-height: normal;
-	background: var(--brown);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	-webkit-text-stroke-width: 0.1px;
-	-webkit-text-stroke-color: var(--brown);
-	text-align: left;
-	transition-duration: 0.5s;
-	padding-left: 5px;
+  font-family: gaegu-r, var(--fonts);
+  word-spacing: 2px;
+  letter-spacing: 3px;
+  line-height: normal;
+  background: var(--brown);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 0.1px;
+  -webkit-text-stroke-color: var(--brown);
+  text-align: left;
+  transition-duration: 0.5s;
+  padding-left: 5px;
 }
 
 .feed-item-title:hover {
-	margin-left: 10px;
+  margin-left: 10px;
 }
 
 .feed-item-title::before {
-	content: url('/!g/pix/starpink.gif');
-	padding: 5px;
+  content: url("/!g/pix/starpink.gif");
+  padding: 5px;
 }
 
 #last a {
-	background: transparent;
+  background: transparent;
 }
 
 #fun {
-	background: var(--pink);
-	width: 175px;
-	height: 250px;
-	overflow: auto;
-	text-align: center;
-	border: var(--b-border);
-	margin-top: 5px;
+  background: var(--pink);
+  width: 175px;
+  height: 250px;
+  overflow: auto;
+  text-align: center;
+  border: var(--b-border);
+  margin-top: 5px;
 }
 
 #fun a {
-	background: transparent;
+  background: transparent;
 }
 
 #home a {
-	background: transparent;
-	position: fixed;
-	top: 10px;
-	left: 10px;
+  background: transparent;
+  position: fixed;
+  top: 10px;
+  left: 10px;
 }
 
 footer {
-	background: var(--soft-brown);
-	color: var(--l-pink);
-	text-align: center;
-	width: 100%;
-	border: var(--y-border);
-	overflow: auto;
-	margin-top: 5px;
-	border-radius: 0px 0px 10px 10px;
+  background: var(--soft-brown);
+  color: var(--l-pink);
+  text-align: center;
+  width: 100%;
+  border: var(--y-border);
+  overflow: auto;
+  margin-top: 5px;
+  border-radius: 0px 0px 10px 10px;
 }
 
 @media only screen and (max-width: 1010px) {
+  #wrapper {
+    margin: 0px;
+  }
 
-	#wrapper {
-		margin: 0px;
-	}
+  header {
+    background: url(!g/index/header.png);
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+  }
 
-	header {
-		background: url(!g/index/header.png);
-		background-size: cover;
-		background-position: bottom;
-		background-repeat: no-repeat;
-	}
+  header,
+  #featured,
+  #is-he-listening,
+  nav,
+  #main {
+    display: block;
+    width: 100%;
+  }
 
-	header,
-	#featured,
-	#is-he-listening,
-	nav,
-	#main {
-		display: block;
-		width: 100%;
-	}
+  #log {
+    display: none;
+  }
 
-	#log {
-		display: none;
-	}
+  h1 {
+    font-size: 25px;
+    bottom: 1px;
+  }
 
-	h1 {
-		font-size: 25px;
-		bottom: 1px;
-	}
+  #main {
+    height: 300px;
+  }
 
-	#main {
-		height: 300px;
-	}
+  nav {
+    height: auto;
+  }
 
-	nav {
-		height: auto;
-	}
+  nav a {
+    display: inline;
+  }
 
-	nav a {
-		display: inline;
-	}
+  nav a::after {
+    content: "☆";
+    padding-left: 10px;
+    line-height: 30px;
+    color: white;
+  }
 
-	nav a::after {
-		content: '☆';
-		padding-left: 10px;
-		line-height: 30px;
-		color: white;
-	}
+  #fun,
+  #last {
+    width: 49%;
+  }
 
-	#fun,
-	#last {
-		width: 49%;
-	}
+  #featured,
+  #mv {
+    height: auto;
+  }
 
-	#featured,
-	#mv {
-		height: auto;
-	}
+  .song,
+  .lp {
+    display: block;
+    width: 100%;
+    border-top: 3px dotted var(--yellow);
+    padding-top: 5px;
+  }
 
-	.song,
-	.lp {
-		display: block;
-		width: 100%;
-		border-top: 3px dotted var(--yellow);
-		padding-top: 5px;
-	}
+  #app,
+  #side,
+  #scroll,
+  #home {
+    display: none;
+  }
 
-	#app,
-	#side,
-	#scroll,
-	#home {
-		display: none;
-	}
-
-	label {
-		background: var(--l-yellow);
-		border-radius: 10px;
-	}
+  label {
+    background: var(--l-yellow);
+    border-radius: 10px;
+  }
 }
 
-@media only screen and (max-width:508px) {
-	#log {
-		display: block;
-		width: 100%;
-	}
+@media only screen and (max-width: 508px) {
+  #log {
+    display: block;
+    width: 100%;
+  }
 }
