--- a/doqmeat/vgs/index.css
+++ b/doqmeat/vgs/index.css
@@ -1,5 +1,6 @@
 /* body css */
 body {
+  background-size: 10px;
   font-size: 16px;
   line-height: 20px;
   font-family: yoster;
@@ -13,6 +14,7 @@ body {
 /* inline CSS */
 
 #wrapper {
+  z-index: 10;
   margin: 20px 0px 30px 700px;
   position: relative;
   width: 560px;
@@ -58,7 +60,8 @@ a {
 }
 
 .filterDiv:hover,
-.filterDiv:focus {
+.filterDiv:focus,
+.filterDiv:active {
   border-radius: 10px;
 }
 
@@ -95,6 +98,7 @@ a {
 }
 
 #infowrapper {
+  z-index: 10;
   width: 550px;
   position: fixed;
   margin-top: 30px;
@@ -103,10 +107,11 @@ a {
 
 #info {
   background: #ffe3ff;
+  height: 500px;
   width: 550px;
-  overflow: auto;
   border-radius: 20px;
   border: 2px dashed white;
+  overflow: hidden;
 }
 
 /* pagedoll */
@@ -154,6 +159,13 @@ a {
   margin-bottom: 20px;
 }
 
+#top {
+  z-index: 1;
+  position: fixed;
+  bottom: 10px;
+  right: -20px;
+}
+
 @media only screen and (max-width: 1240px) {
   #back {
     display: block;
@@ -174,7 +186,9 @@ a {
   }
 
   #pagedoll2,
-  #pagedoll {
+  #pagedoll,
+  #top,
+  #home {
     display: none;
   }
 }
