--- a/doqmeat/!f/v4/body.css
+++ b/doqmeat/!f/v4/body.css
@@ -1,409 +1,330 @@
 * {
-	box-sizing: border-box;
-	list-style-position: inside;
+  box-sizing: border-box;
+  list-style-position: inside;
 }
 
 :root {
-	--fonts: gaegu-l, ms pgothic, arial;
+  --fonts: gaegu-l, ms pgothic, arial;
 }
 
 body {
-	margin: 0px;
-	font-size: 1.2rem;
-	font-family: var(--fonts);
+  margin: 0px;
+  font-size: 1.2rem;
+  font-family: var(--fonts);
 }
 
 .box {
-	border-radius: 10px;
-	padding: 10px;
-	overflow: auto;
+  border-radius: 10px;
+  padding: 10px;
+  overflow: auto;
 }
 
 h2 {
-	font-size: 1.6rem;
-	text-align: center;
+  font-size: 1.6rem;
+  text-align: center;
 }
 
 h3 {
-	font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 h4 {
-	font-size: 1.0rem;
+  font-size: 1rem;
 }
 
 h2,
 h3,
 h4 {
-	font-family: spirit, morningtea;
-	font-weight: normal;
-	margin: 5px;
+  font-family: spirit, morningtea;
+  font-weight: normal;
+  margin: 5px;
 }
 
 details {
-	padding: 10px;
+  padding: 10px;
 }
 
 details summary {
-	cursor: help;
+  cursor: help;
 }
 
 select {
-	float: left;
-	font-family: ms pgothic, var(--fonts);
-	border: none;
+  float: left;
+  font-family: ms pgothic, var(--fonts);
+  border: none;
 }
 
 #wrapper {
-	position: relative;
-	display: grid;
-	margin: auto;
-	max-width: 1100px;
-	grid-template-areas:
-		"header header header"
-		"nav info updates"
-		"nav status currently"
-		"comm pic f-cat"
-		"comm bye chat"
-		"music bye widgets"
-		"foot foot foot";
-	grid-template-columns: 20% 50% 30%;
-	grid-template-rows: 80px 390px 190px 260px 290px 170px;
-	gap: 30px;
-	padding: 20px 75px 20px 20px;
+  position: relative;
+  display: grid;
+  margin: auto;
+  max-width: 1100px;
+  grid-template-areas:
+    "header header header"
+    "nav info updates"
+    "nav status currently"
+    "f-page pic f-cat"
+    "comm bye chat"
+    "comm bye widgets"
+    "foot foot foot";
+  grid-template-columns: 20% 50% 30%;
+  grid-template-rows: 80px 390px 190px 260px 290px 170px;
+  gap: 30px;
+  padding: 20px 75px 20px 20px;
 }
 
 #header {
-	grid-area: header;
-	overflow: hidden;
+  grid-area: header;
+  overflow: hidden;
 }
 
 h1 {
-	margin: 20px 10px 0 0;
-	text-align: right;
-	font-weight: normal;
+  margin: 20px 10px 0 0;
+  text-align: right;
+  font-weight: normal;
 }
 
 nav {
-	grid-area: nav;
+  grid-area: nav;
 }
 
 nav a {
-	display: block;
-	text-decoration: none;
-	margin-left: 1em;
+  display: block;
+  text-decoration: none;
+  margin-left: 1em;
 }
 
 #intro {
-	grid-area: info;
+  grid-area: info;
 }
 
-#musicbox {
-	grid-area: music;
-	width: 152%;
+#featured-page {
+  text-align: center;
+  grid-area: f-page;
+  width: 152%;
+}
+
+#featured-page img,
+#featured-cat img,
+#piclog img {
+  border-radius: 10px;
 }
 
 #piclog {
-	text-align: center;
-	grid-area: pic;
-	width: 70%;
-	margin-left: 100px;
+  text-align: center;
+  grid-area: pic;
+  width: 70%;
+  margin-left: 100px;
 }
 
 #status {
-	grid-area: status;
-	text-align: center;
+  grid-area: status;
+  text-align: center;
 }
 
 #chat {
-	grid-area: chat;
-	margin-left: 50px;
+  grid-area: chat;
+  margin-left: 50px;
 }
 
 #current {
-	grid-area: currently;
-	margin-top: -80px;
+  grid-area: currently;
+  margin-top: -80px;
 }
 
 #current p {
-	margin: 10px;
+  margin: 10px;
 }
 
 #featured-cat {
-	grid-area: f-cat;
-	text-align: center;
-	margin-left: -55px;
+  grid-area: f-cat;
+  text-align: center;
+  margin-left: -55px;
 }
 
 #comm {
-	grid-area: comm;
-	text-align: center;
-	width: 152%;
+  grid-area: comm;
+  text-align: center;
+  width: 152%;
 }
 
 #comm button {
-	font-family: ms pgothic, arial;
-	font-size: 15px;
-	border: none;
-	background: transparent;
+  font-family: ms pgothic, arial;
+  font-size: 15px;
+  border: none;
+  background: transparent;
 }
 
 .comm-box {
-	margin-top: 10px;
-	display: none;
+  margin-top: 10px;
+  display: none;
 }
 
 #widgets {
-	grid-area: widgets;
-	text-align: center;
-	margin-left: 50px;
+  grid-area: widgets;
+  text-align: center;
+  margin-left: 50px;
 }
 
 #outro {
-	grid-area: bye;
-	margin-left: 100px;
-	width: 91%;
+  grid-area: bye;
+  margin-left: 100px;
+  width: 91%;
 }
 
 #updates {
-	grid-area: updates;
-	height: 80%;
+  grid-area: updates;
+  height: 80%;
 }
 
 #updates div a {
-	font-size: 0.8rem;
-	text-decoration: inherit;
+  font-size: 0.8rem;
+  text-decoration: inherit;
 }
 
 footer {
-	grid-area: foot;
-	text-align: center;
+  grid-area: foot;
+  text-align: center;
 }
 
 footer p {
-	margin: 5px;
+  margin: 5px;
 }
 
 #s-m-t-tooltip {
-	max-width: 400px;
-	text-align: center;
-	z-index: 9999;
-	margin: 30px 15px 7px 12px;
-	padding: 5px;
+  max-width: 400px;
+  text-align: center;
+  z-index: 9999;
+  margin: 30px 15px 7px 12px;
+  padding: 5px;
 }
 
 /*currently*/
 
 #current .hl {
-	font-weight: bold;
-	border-radius: 3px;
-	padding: 1px;
+  font-weight: bold;
+  border-radius: 3px;
+  padding: 1px;
 }
 
 #current .date {
-	text-align: right;
-	font-size: .8em;
-	padding-top: 5px;
+  text-align: right;
+  font-size: 0.8em;
+  padding-top: 5px;
 }
 
 /*RSS widget*/
 
 .feed-title {
-	display: none;
+  display: none;
 }
 
 /*status cafe*/
 
 #statuscafe {
-	text-align: left;
-	margin: 15px;
-	overflow: hidden;
+  text-align: left;
+  margin: 15px;
+  overflow: hidden;
 }
 
 #statuscafe a {
-	letter-spacing: 2px;
+  letter-spacing: 2px;
 }
 
 #statuscafe-username {
-	padding: 5px 10px;
+  padding: 5px 10px;
 }
 
 #statuscafe-content {
-	padding: 10px 15px;
-}
-
-/*music player*/
-
-#musicplayer {
-	margin: auto;
-	background: transparent;
-	width: 90%;
-}
-
-.songtitle {
-	padding: 5px;
-	display: block;
-}
-
-.controls {
-	font-size: 18px !important;
-	background-color: transparent;
-	text-align: center;
-	width: 100%;
-}
-
-.controls td {
-	padding: 8px 5px 0px 5px;
-}
-
-.seeking {
-	background-color: transparent;
-	display: flex;
-	justify-content: space-evenly;
-	padding: 5px;
-}
-
-.current-time {
-	padding-right: 5px;
-}
-
-.total-duration {
-	padding-left: 5px;
-}
-
-i.fas:hover {
-	cursor: help;
-}
-
-input[type=range] {
-	-webkit-appearance: none;
-	width: 100%;
-	background-color: transparent;
-}
-
-input[type=range]:focus {
-	outline: none;
-}
-
-/* settings for chrome browsers */
-input[type=range]::-webkit-slider-runnable-track {
-	width: 100%;
-	height: 2px;
-	cursor: help;
-}
-
-input[type=range]::-webkit-slider-thumb {
-	height: 10px;
-	width: 10px;
-	border-radius: 5px;
-	cursor: help;
-	-webkit-appearance: none;
-	margin-top: -4.5px;
-}
-
-/* settings for firefox browsers */
-input[type=range]::-moz-range-track {
-	width: 100%;
-	height: 2px;
-	cursor: help;
-}
-
-input[type=range]::-moz-range-thumb {
-	height: 10px;
-	width: 10px;
-	border-radius: 5px;
-	/* change to 5px if you want a circle seeker */
-	cursor: help;
-	border: none;
+  padding: 10px 15px;
 }
 
 @media only screen and (max-width: 1100px) {
+  #chat,
+  #outro,
+  #featured-page,
+  #widgets,
+  #comm,
+  #piclog,
+  #featured-cat,
+  #current,
+  #updates,
+  #nav {
+    width: auto;
+    height: auto;
+    margin: 0;
+  }
 
-	#chat,
-	#outro,
-	#musicbox,
-	#widgets,
-	#comm,
-	#piclog,
-	#featured-cat,
-	#current,
-	#updates,
-	#nav {
-		width: auto;
-		height: auto;
-		margin: 0;
-	}
-
-	#wrapper {
-		grid-template-columns: 25% 50% 25%;
-	}
+  #wrapper {
+    grid-template-columns: 25% 50% 25%;
+  }
 }
 
-@media only screen and (max-width:760px) {
+@media only screen and (max-width: 760px) {
+  #chat,
+  #outro,
+  #featured-page,
+  #widgets,
+  #comm,
+  #piclog,
+  #featured-cat,
+  #current,
+  #updates,
+  #nav {
+    margin: 40px 0px;
+  }
 
-	#chat,
-	#outro,
-	#musicbox,
-	#widgets,
-	#comm,
-	#piclog,
-	#featured-cat,
-	#current,
-	#updates,
-	#nav {
-		margin: 40px 0px;
-	}
+  select {
+    float: none;
+    margin: 10px;
+  }
 
-	select {
-		float: none;
-		margin: 10px;
-	}
+  h1 {
+    margin: 10px 0;
+    text-align: center;
+  }
 
-	h1 {
-		margin: 10px 0;
-		text-align: center;
-	}
+  #featured-cat,
+  #featured-page {
+    max-height: 390px;
+  }
 
-	#featured-cat {
-		max-height: 390px;
-	}
+  #comm {
+    height: 300px;
+  }
 
-	#comm {
-		height: 300px;
-	}
+  #chat {
+    height: 360px;
+    overflow: hidden;
+  }
 
-	#chat {
-		height: 360px;
-		overflow: hidden
-	}
+  #widgets {
+    height: 105px;
+  }
 
-	#widgets {
-		height: 105px;
-	}
+  #piclog {
+    max-height: 300px;
+  }
 
-	#piclog {
-		max-height: 300px;
-	}
+  #nav {
+    text-align: center;
+  }
 
-	#nav {
-		text-align: center;
-	}
+  #nav a {
+    display: inline-block;
+  }
 
-	#nav a {
-		display: inline-block;
-	}
+  #updates {
+    height: 300px;
+  }
 
-	#updates {
-		height: 300px;
-	}
+  #musicplayer {
+    width: 80%;
+  }
 
-	#musicplayer {
-		width: 80%;
-	}
-
-	#wrapper {
-		display: block;
-		padding: 0px;
-		margin: 20px;
-	}
+  #wrapper {
+    display: block;
+    padding: 0px;
+    margin: 20px;
+  }
 }
