--- a/doqmeat/music/index.css
+++ b/doqmeat/music/index.css
@@ -1,79 +1,51 @@
 #wrapper {
-  position: relative;
-  max-width: 1010px;
+  max-width: 1000px;
   margin: auto;
-  word-spacing: -6px;
-  margin-top: 50px;
-}
-
-nav,
-#scroll,
-#log,
-#featured,
-#is-he-listening,
-footer {
-  word-spacing: var(--spacing);
-}
-
-header {
-  position: relative;
-  background: url(!g/index/header.png);
-  background-size: 100%;
-  background-position: bottom;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 200px;
-  border: var(--b-border);
-  margin-bottom: 5px;
-  border-radius: 10px 10px 0px 0px;
-}
-
-:root {
-  --p-border: 4px ridge var(--pink);
-  --lp-border: 4px ridge var(--l-pink);
-  --y-border: 4px ridge var(--yellow);
-  --b-border: 4px ridge var(--l-brown);
-}
-
-h1 {
-  -webkit-text-stroke-color: var(--brown);
-  letter-spacing: 4px;
-  position: absolute;
-  bottom: -20px;
-  left: 10px;
-}
-
-#scroll {
-  background: white;
-  width: 100%;
-  border: var(--b-border);
-  margin-bottom: 5px;
+  display: grid;
+  grid-template-areas:
+    "header header header"
+    "nav frame log"
+    "nav frame player"
+    "mv mv mv"
+    "updates featured featured"
+    "graphics poll widgets"
+    "foot foot foot";
+  grid-template-columns: 20% 50% 30%;
+  grid-template-rows: 200px 260px 230px 150px 280px 250px auto;
+  gap: 10px;
+  padding: 5px 30px 5px 5px;
+  margin-bottom: 30px;
 }
 
 .box {
-  position: relative;
-  display: inline-block;
-  vertical-align: top;
-}
-
-nav {
-  background: var(--soft-brown);
-  width: 200px;
-  height: 550px;
-  border: var(--y-border);
-  padding: 3px 5px;
+  border: 2px solid var(--l-brown);
   overflow: auto;
-  scrollbar-width: none;
-  /* Firefox */
-  margin-right: 5px;
+  position: relative;
+  border-radius: 10px;
 }
 
-nav::-webkit-scrollbar {
-  display: none;
-  /* Safari and Chrome */
+#header {
+  grid-area: header;
+  background: url(!g/index/header.png);
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
 }
 
-nav a {
+#header h1 {
+  word-spacing: 25px;
+  letter-spacing: 10px;
+  text-align: center;
+  font-size: 25px;
+}
+
+#nav {
+  grid-area: nav;
+  background: var(--soft-brown);
+  padding: 3px 5px;
+}
+
+#nav a {
   display: block;
   margin: 10px 0px;
   padding: 5px 0px;
@@ -84,104 +56,78 @@ nav a {
   line-height: 16px;
 }
 
-nav a:hover {
+#nav a:hover {
   margin-left: 15px;
   color: var(--l-brown);
 }
 
-nav a:focus {
-  margin-left: 15px;
-  color: var(--l-brown);
-  background: var(--l-yellow);
-}
-
-nav h3,
-nav h4 {
-  -webkit-text-stroke-width: 0px;
+#nav h3,
+#nav h4 {
+  -webkit-text-stroke-width: 1px;
   text-align: center;
   letter-spacing: 2px;
 }
 
-nav h3 {
+#nav h3 {
   font-size: 15px;
 }
 
-nav h4 {
+#nav h4 {
   font-size: 13px;
 }
 
-h4 {
-  font-size: 15px;
-}
-
-#main {
+#frame {
+  grid-area: frame;
   background: var(--l-yellow);
-  width: 509px;
-  height: 550px;
-  margin-right: 5px;
+  overflow: hidden;
 }
 
-#main iframe {
-  border: var(--p-border);
+#frame iframe {
+  border: 0;
 }
 
-#side {
-  width: 290px;
-  height: 550px;
-}
-
-#player {
+#music-player {
+  grid-area: player;
   background: var(--pink);
-  width: 100%;
-  height: 364px;
-  border: var(--b-border);
 }
 
-#img {
-  margin-top: 5px;
-  background: url(!g/index/cat-dj.png);
-  background-size: 220px;
-  background-position: center right;
-  background-repeat: no-repeat;
-  background-color: white;
-  display: block;
-  width: 100%;
-  height: 180px;
-  padding: 5px;
-  overflow: hidden;
-  border: var(--y-border);
-  word-spacing: 2px;
+#updates {
+  grid-area: updates;
+  width: 151%;
+  padding: 10px;
+  background: white;
 }
 
+#updates h3 {
+  font-size: 14px;
+}
+
+#updates p {
+  margin: 15px 0;
+}
 #mv {
-  background: var(--yellow);
-  margin-top: 5px;
-  width: 100%;
-  height: 150px;
-  border: var(--b-border);
-  overflow: hidden;
+  grid-area: mv;
   line-height: 0px;
+  overflow: hidden;
+}
+#mv a {
+  padding: 0;
+  margin: 0;
+  background: transparent;
 }
 
 #mv img {
-  width: 100%;
-}
-
-#mv a {
-  padding: 0px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 0;
+  max-width: 1000px;
 }
 
 #log {
-  margin-top: 5px;
-  width: 400px;
-  height: 230px;
+  background: #ffe4ed;
+  grid-area: log;
+  padding-top: 5px;
   overflow: hidden;
-  border: var(--y-border);
-  margin-right: 5px;
-}
-
-#log iframe {
-  border: none;
 }
 
 #log a {
@@ -193,8 +139,12 @@ h4 {
   width: 100%;
   height: 100%;
 }
+#log iframe {
+  border: none;
+}
 
-#log h4 {
+#log h3 {
+  font-size: 13px;
   position: absolute;
   display: block;
   margin-top: 10px;
@@ -202,14 +152,11 @@ h4 {
 }
 
 #featured {
+  grid-area: featured;
+  margin-left: 100px;
   background: var(--l-brown);
   color: var(--l-yellow);
-  margin-top: 5px;
-  width: 605px;
-  height: 230px;
   padding: 5px;
-  overflow: auto;
-  border: var(--p-border);
 }
 
 #featured i {
@@ -220,7 +167,17 @@ h4 {
   margin: 0px;
 }
 
+#featured h3 {
+  -webkit-text-stroke-width: 1px;
+  font-size: 15px;
+  margin: 5px 0px;
+  text-align: center;
+}
+
 #featured h4 {
+  font-family: ms pgothic, var(--fonts);
+  -webkit-text-stroke-width: 0px;
+  font-size: 15px;
   margin: 5px 0px;
   text-align: center;
 }
@@ -231,6 +188,10 @@ h4 {
   border-radius: 10px;
 }
 
+#featured hr {
+  border: 1px dashed var(--yellow);
+}
+
 .song,
 .lp {
   display: inline-block;
@@ -238,186 +199,243 @@ h4 {
   vertical-align: top;
 }
 
-#featured hr {
-  border: 1px dashed var(--yellow);
-}
-
-#is-he-listening {
+#poll {
+  grid-area: poll;
   background: url(!g/index/is-he-listening.png) no-repeat;
   background-size: 400px;
   background-position: top left;
   background-color: white;
   text-align: right;
   padding: 5px;
-  width: 525px;
-  height: 250px;
-  border: var(--lp-border);
-  margin-top: 5px;
-  margin-right: 5px;
 }
 
-#is-he-listening h4 {
-  margin: 5px 0px;
+#poll h3 {
+  font-size: 14px;
+  margin: 15px 0px;
 }
 
-#last {
+#widgets {
+  grid-area: widgets;
   background: var(--yellow);
-  width: 300px;
-  height: 250px;
-  overflow: auto;
   text-align: center;
-  border: var(--b-border);
-  margin-top: 5px;
-  margin-right: 5px;
 }
 
-.feed-title {
-  display: none;
+#widgets h3 {
+  font-size: 14px;
 }
 
-.feed-item-title {
-  font-family: gaegu-r, var(--fonts);
-  word-spacing: 2px;
-  letter-spacing: 3px;
-  line-height: normal;
-  background: var(--brown);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-width: 0.1px;
-  -webkit-text-stroke-color: var(--brown);
-  text-align: left;
-  transition-duration: 0.5s;
-  padding-left: 5px;
-}
-
-.feed-item-title:hover {
-  margin-left: 10px;
-}
-
-.feed-item-title::before {
-  content: url("/!g/pix/starpink.gif");
-  padding: 5px;
-}
-
-#last a {
-  background: transparent;
-}
-
-#fun {
-  background: var(--pink);
-  width: 175px;
-  height: 250px;
-  overflow: auto;
-  text-align: center;
-  border: var(--b-border);
-  margin-top: 5px;
-}
-
-#fun a {
-  background: transparent;
-}
-
+#widgets a,
+#graphics a,
 #home a {
   background: transparent;
-  position: fixed;
-  top: 10px;
-  left: 10px;
 }
 
-footer {
+#graphics {
+  grid-area: graphics;
+  background: var(--pink);
+  text-align: center;
+}
+
+#foot {
+  grid-area: foot;
   background: var(--soft-brown);
   color: var(--l-pink);
   text-align: center;
-  width: 100%;
-  border: var(--y-border);
-  overflow: auto;
-  margin-top: 5px;
-  border-radius: 0px 0px 10px 10px;
+  padding: 5px;
 }
 
-@media only screen and (max-width: 1010px) {
+/* music player */
+
+#musicplayer {
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: auto;
+}
+
+.songtitle,
+.track-info,
+.now-playing {
+  padding: 5px;
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 17px !important;
+  /* size of controls */
+  width: 100%;
+}
+
+.buttons div {
+  width: 33.3%;
+}
+
+.seeking,
+.volume {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+}
+
+.now-playing,
+.track-info {
+  background-color: var(--l-pink);
+  /* background color of top two boxes */
+}
+
+.now-playing {
+  font-weight: bold;
+}
+
+i.fa-pause,
+i.fa-play,
+i.fa-forward,
+i.fa-backward {
+  color: var(--l-brown);
+}
+
+i.fa-play,
+i.fa-pause {
+  font-size: 30px !important;
+  /* size of play pause button */
+}
+
+input[type="range"] {
+  background: transparent;
+  -webkit-appearance: none;
+  /* removes default appearance of the tracks */
+  width: 100%;
+}
+
+input[type="range"]:focus {
+  outline: none;
+  /* removes outline around tracks when focusing */
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 4px;
+  /* thickness of seeking track */
+  background: var(--brown);
+  /* color of seeking track */
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  height: 10px;
+  /* height of seeking square */
+  width: 10px;
+  /* width of seeking square */
+  border-radius: 0px;
+  /* change to 5px if you want a circle seeker */
+  background: var(--brown);
+  /* color of seeker square */
+  -webkit-appearance: none;
+  margin-top: -3px;
+  /* fixes the weird margin around the seeker square in chrome */
+}
+
+input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 4px;
+  /* thickness of seeking track */
+  background: var(--brown);
+  /* color of seeking track */
+}
+
+input[type="range"]::-moz-range-thumb {
+  height: 10px;
+  /* height of seeking square */
+  width: 10px;
+  /* width of seeking square */
+  border-radius: 0px;
+  /* change to 5px if you want a circle seeker */
+  background: var(--yellow);
+  /* color of seeker square */
+  border: none;
+  /* removes weird border around seeker square in firefox */
+}
+
+@media only screen and (max-width: 700px) {
   #wrapper {
-    margin: 0px;
+    display: block;
+    margin: 0;
+    padding: 0 20px;
   }
 
-  header {
-    background: url(!g/index/header.png);
-    background-size: cover;
-    background-position: bottom;
-    background-repeat: no-repeat;
-  }
-
-  header,
-  #featured,
-  #is-he-listening,
-  nav,
-  #main {
+  .box {
     display: block;
     width: 100%;
+    margin: auto;
+    margin-top: 40px;
   }
 
-  #log {
-    display: none;
+  #header {
+    height: 200px;
+    background-size: contain;
+    background-position: bottom;
+    background-color: white;
   }
 
-  h1 {
-    font-size: 25px;
-    bottom: 1px;
+  #nav {
+    padding: 5px;
   }
 
-  #main {
-    height: 300px;
-  }
-
-  nav {
-    height: auto;
-  }
-
-  nav a {
-    display: inline;
-  }
-
-  nav a::after {
-    content: "☆";
+  #nav a::before {
+    content: "☆ ";
     padding-left: 10px;
-    line-height: 30px;
     color: white;
   }
 
-  #fun,
-  #last {
-    width: 49%;
+  #nav a {
+    padding: 0;
+    margin: 0;
+    display: inline-block;
   }
 
-  #featured,
-  #mv {
-    height: auto;
+  #nav h4 {
+    text-align: left;
   }
 
-  .song,
-  .lp {
-    display: block;
+  #frame {
+    height: 400px;
+  }
+
+  #updates {
     width: 100%;
-    border-top: 3px dotted var(--yellow);
-    padding-top: 5px;
   }
 
-  #app,
-  #side,
-  #scroll,
-  #home {
-    display: none;
+  #mv img {
+    text-align: center;
+    vertical-align: middle;
+    line-height: 0;
+    max-width: 100%;
   }
 
-  label {
-    background: var(--l-yellow);
-    border-radius: 10px;
+  #featured {
+    margin-left: 0;
   }
-}
 
-@media only screen and (max-width: 508px) {
+  #poll {
+    height: 300px;
+  }
+
   #log {
-    display: block;
-    width: 100%;
+    height: 300px;
+  }
+
+  #music-player {
+    width: 70%;
   }
 }
