--- a/doqmeat/journal/index.css
+++ b/doqmeat/journal/index.css
@@ -129,6 +129,7 @@ aside div {
 #footer {
   position: sticky;
   top: 0px;
+  text-align: center;
 }
 
 @media only screen and (max-width: 1078px) {
@@ -152,13 +153,14 @@ aside div {
   }
 
   #pic,
-  #quote {
+  #quote,
+  #calendar,
+  #notes {
     display: none;
   }
 
   #mainframe {
     padding: 20px;
-    height: 600px;
   }
 
   aside div {
