added youtube playlist to journal

--- a/doqmeat/journal/index.css
+++ b/doqmeat/journal/index.css
@@ -127,9 +127,12 @@ aside div {
 }
 
 #footer {
+  text-align: center;
+}
+
+#sticky {
   position: sticky;
   top: 0px;
-  text-align: center;
 }
 
 @media only screen and (max-width: 1078px) {
