--- a/doqmeat/!f/v4/sunset/style.css
+++ b/doqmeat/!f/v4/sunset/style.css
@@ -192,7 +192,7 @@ p.feed-item-desc:nth-of-type(1) {
 
 #statuscafe-content {
   font-size: 19px;
-  background: #efc0c6;
+  background: #e9dddf;
   color: #5b6b9c;
 }
 
