--- a/doqmeat/fonts/stylesheet.css
+++ b/doqmeat/fonts/stylesheet.css
@@ -217,3 +217,8 @@
   font-family: "mononoki";
   src: url(mononoki.ttf);
 }
+
+@font-face {
+  font-family: "silkscreen";
+  src: url(silkscreen.ttf);
+}
